Fix components not scaling properly on small screens

--- a/src/modules/CalculateButton.module.css
+++ b/src/modules/CalculateButton.module.css
@@ -1,8 +1,11 @@
 .calculate_button {
     justify-self: center;
+    grid-column: 2 / 3;
+    margin: 20px 0 0 0;
 }
 
 .calculate_button button{
+    cursor: pointer;
     width: 190px;
     height: 60px;
     border: none;
