--- a/src/modules/ChordDisplay.module.css
+++ b/src/modules/ChordDisplay.module.css
@@ -1,9 +1,9 @@
 .chord_container {
-    height: 200px;
-    width: 400px;
+    margin: 0 0 25px 0;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    grid-column: 2 / 3;
 }
 
 .chord_container h1 {
