--- a/src/modules/Home.module.css
+++ b/src/modules/Home.module.css
@@ -1,5 +1,6 @@
 .home {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
+    margin: 50px 0;
 }
