--- a/src/modules/Navbar.module.css
+++ b/src/modules/Navbar.module.css
@@ -1,9 +1,9 @@
 header {
-    height: 145px;
+    height: 150px;
 }
 
 .nav {
-    padding: 50px 0 30px 0;
+    padding: 50px 0;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
